# crypto-observability-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  deps_auth.py
app/api/routes/: auth.py  crypto.py  health.py
app/clients/: coingecko.py
app/core/: cache.py  lifespan.py  logging.py  middleware.py  security.py  users.py
app/schemas/: crypto.py
app/services/: auth_service.py  crypto_service.py  models.py
tests/: test_healthcheck.py
tests/services/: test_crypto_service.py
