[project]
name = "crypto-observability-api"
version = "0.1.0"
description = "FastAPI service for crypto observability"
requires-python = ">=3.11"

# -------------------------
# Ruff configuration
# -------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line length handled by Black
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py311"]
