[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-observability-api"
version = "0.1.0"
description = "FastAPI service for crypto observability"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2.0",
  "httpx",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "bcrypt<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "black",
  "fastapi[test]",
  "pre-commit",
]

# -------------------------
# Test configuration
# -------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"

# -------------------------
# Package configuration
# -------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# -------------------------
# Ruff configuration
# -------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "E501", # handled by Black
  "B008", # FastAPI Depends() is a framework-level exception
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# -------------------------
# Black configuration
# -------------------------
[tool.black]
line-length = 100
target-version = ["py311"]
